...
            android:id="@+id/widget_song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="#99FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

    <!-- Playback Controls -->
    <LinearLayout
...
